--- a/src/sass/media-screens/_x-large.scss
+++ b/src/sass/media-screens/_x-large.scss
@@ -1,4 +1,4 @@
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
+@include media-breakpoint-only(xl) {
 
 }
